[package]
name = "kampu"
version = "0.1.1"
license = "Apache-2.0"
description = "Generic byte array parser function where you can define the structure/tree of the bytes in JSON, send it a byte array and get the parsed output in JSON."
repository = "https://github.com/ykasidit/kampu"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitter = "0.7.0"
hex = "0.4.3"
function_name = "0.3.0"
panic-message = "0.3.0"
lazy_static = "1.4.0"
serde_json = {version = "1.0.32", features = ["preserve_order"]}
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
log = "0.4.20"
serde = { version = "1.0.192", features = ["derive"] }
serde-xml-rs = "0.6.0"
rumqttc = { version = "0.24.0", features = ["websocket"] }
tokio-rustls = "0.25.0"
rustls-native-certs = "0.7.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "sync"] }
futures = "0.3.30"
regex = "1.10.4"
once_cell = "1.19.0"
chrono = "0.4.38"
evalexpr = "11.3.0"

