[package]
name = "kampu"
version = "0.1.3"
edition = '2021'
license = "Apache-2.0"
description = "Generic byte array parser function where you can define the structure/tree of the bytes in JSON, send it a byte array and get the parsed output in JSON."
repository = "https://github.com/ykasidit/kampu"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitter = "0.7.0"
hex = "0.4.3"
serde_json = {version = "1.0.32", features = ["preserve_order"]}
serde = { version = "1.0.192", features = ["derive"] }
once_cell = "1.19.0"
evalexpr = "11.3.0"

